rust/oxide_generator_rs/tests/ui/fail_reducer_wrong_signature.stderr
error: `reduce` third argument must be `oxide_core::Context<...>`
  --> tests/ui/fail_reducer_wrong_signature.rs:19:18
   |
19 |         _action: Self::Action,
   |                  ^^^^^^^^^^^^
